# uav_trajectory_planner

./: .gitignore  README.md
docs/: compass_artifact_wf-e360ee0f-7ce6-494e-bd25-b9057794704f_text_markdown.md  task_detal.md  technical_report.md  uav_trajectory_optimization_roadmap_zh.md
src/trajectory_planner/: CMakeLists.txt  package.xml
src/trajectory_planner/config/: planner_params.yaml
src/trajectory_planner/include/trajectory_planner/bspline/: bspline_optimizer.hpp  uniform_bspline.hpp
src/trajectory_planner/include/trajectory_planner/corridor/: corridor_generator.hpp
src/trajectory_planner/include/trajectory_planner/path_searching/: kinodynamic_astar.hpp
src/trajectory_planner/include/trajectory_planner/plan_env/: grid_map.hpp
src/trajectory_planner/include/trajectory_planner/plan_manage/: planner_manager.hpp
src/trajectory_planner/launch/: full_simulation.launch  test_path_search.launch
src/trajectory_planner/msg/: BsplineTrajectory.msg
src/trajectory_planner/rviz/: full_simulation.rviz  path_search.rviz
src/trajectory_planner/src/: planner_node.cpp
src/trajectory_planner/src/bspline/: bspline_optimizer.cpp  uniform_bspline.cpp
src/trajectory_planner/src/corridor/: corridor_generator.cpp
src/trajectory_planner/src/path_searching/: kinodynamic_astar.cpp
src/trajectory_planner/src/plan_env/: grid_map.cpp
src/trajectory_planner/src/plan_manage/: planner_manager.cpp
src/trajectory_planner/src/traj_server/: traj_server_node.cpp
