<?xml version="1.0"?>
<package format="2">
  <name>trajectory_planner</name>
  <version>1.0.0</version>
  <description>UAV trajectory planner with B-spline optimization and corridor constraints</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>decomp_ros_utils</depend>
  <depend>decomp_util</depend>

</package>
